Fixed some styling issues on Safari

--- a/src/styles/countriesmap.module.scss
+++ b/src/styles/countriesmap.module.scss
@@ -1,6 +1,7 @@
 @use "./mixin" as mixin;
 
 #map {
+  width: 100%;
   margin-top: 3rem;
   margin-bottom: 7rem;
 
