--- a/src/styles/landing.module.scss
+++ b/src/styles/landing.module.scss
@@ -7,7 +7,7 @@
   align-items: center;
 
   .map {
-    width: 80rem;
+    width: 90rem;
     display: flex;
     justify-content: center;
     align-items: center;
