--- a/src/styles/nationalparksmap.module.scss
+++ b/src/styles/nationalparksmap.module.scss
@@ -1,6 +1,7 @@
 @use "./mixin" as mixin;
 
 #map {
+  width: 100%;
   margin-top: -2rem;
   margin-left: 4rem;
 
